<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>taf-bris</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <parent>
        <groupId>uk.gov.companieshouse.taf</groupId>
        <artifactId>taf-parent</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <properties>
        <cucumber.options>--tags @regression</cucumber.options>
        <spring.version>4.3.8.RELEASE</spring.version>
        <mongodb.version>3.4.2</mongodb.version>
        <spring.data.mongo.version>1.10.1.RELEASE</spring.data.mongo.version>
        <validation.api.version>1.1.0.Final</validation.api.version>
        <cucumber.version>1.2.5</cucumber.version>
        <failsafe.fork.count>1</failsafe.fork.count>
        <java.version>1.8</java.version>
        <ch.kafka.version>1.0.0-rc2</ch.kafka.version>
        <env>default</env>
        <classes>**/*AllTests.java</classes>
        <maven.build.timestamp.format>yyyy-MM-dd-HHmm</maven.build.timestamp.format>
        <repo.basedir>${project.basedir}/repo</repo.basedir>
        <skipITs>false</skipITs>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- disables unit tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

            <!-- integration tests i.e. cucumber tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <forkCount>${failsafe.fork.count}</forkCount>
                    <reuseForks>false</reuseForks>
                    <includes>
                        <include>${classes}</include>
                    </includes>
                    <runOrder>alphabetical</runOrder>
                    <argLine>-Duser.language=en</argLine>
                    <argLine>-Xmx512m</argLine>
                    <argLine>-XX:MaxPermSize=256m</argLine>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <systemPropertyVariables>
                        <env>${env}</env>
                        <project.dir>${basedir}</project.dir>
                        <cucumber.options>${cucumber.options}</cucumber.options>
                        <http.proxyHost>${http.proxyHost}</http.proxyHost>
                        <https.proxyHost>${https.proxyHost}</https.proxyHost>
                        <http.proxyPort>${http.proxyPort}</http.proxyPort>
                        <https.proxyPort>${https.proxyPort}</https.proxyPort>
                        <http.nonProxyHosts>${http.nonProxyHosts}</http.nonProxyHosts>
                        <hubUrl>${hubUrl}</hubUrl>
                    </systemPropertyVariables>
                </configuration>
                <executions>
                    <execution>
                        <id>failsafe-integration-test</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- HTML reports -->
            <plugin>
                <groupId>io.magentys</groupId>
                <artifactId>donut-maven-plugin</artifactId>
                <version>0.0.4</version>
                <executions>
                    <execution>
                        <id>execution</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <sourceDirectory>${project.build.directory}/cucumber-reports</sourceDirectory>
                            <outputDirectory>${project.build.directory}/donut/</outputDirectory>
                            <timestamp>${maven.build.timestamp}</timestamp>
                            <template>default</template>
                            <prefix>taf-bris</prefix>
                            <!--<prefix>${project.name}</prefix>-->
                            <projectName>${project.name}</projectName>
                            <projectVersion>${project.version}</projectVersion>
                            <countSkippedAsFailure>true</countSkippedAsFailure>
                            <skip>${skipITs}</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Cucumber parallel plugin -->
            <plugin>
                <groupId>com.github.temyers</groupId>
                <artifactId>cucumber-jvm-parallel-plugin</artifactId>
                <version>2.2.0</version>
                <executions>
                    <execution>
                        <id>generateRunners</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>generateRunners</goal>
                        </goals>
                        <configuration>
                            <!-- Mandatory -->
                            <glue>uk.gov.companieshouse.taf</glue>
                            <!-- These are the default values -->
                            <outputDirectory>${project.build.directory}/generated-test-sources/cucumber
                            </outputDirectory>
                            <featuresDirectory>src/test/resources/features/</featuresDirectory>
                            <cucumberOutputDir>target/cucumber-reports</cucumberOutputDir>
                            <format>json</format>
                            <filterFeaturesByTags>true</filterFeaturesByTags>
                            <namingScheme>pattern</namingScheme>
                            <namingPattern>{f}IT</namingPattern>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>

        <!-- Main source dependencies -->
        <dependency>
            <groupId>uk.gov.ch.taf</groupId>
            <artifactId>common</artifactId>
            <version>4.0.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.8.8.1</version>
        </dependency>

        <!-- Spring Data MongoDB -->
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-mongodb</artifactId>
            <version>${spring.data.mongo.version}</version>
        </dependency>

        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>${mongodb.version}</version>
        </dependency>

        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>${validation.api.version}</version>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>ch-kafka</artifactId>
            <version>${ch.kafka.version}</version>
        </dependency>

        <!-- test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-java8</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-spring</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.digit.bris.domibus-plugin</groupId>
            <artifactId>domibus-bris-jaxb</artifactId>
            <version>1.0.5</version>
        </dependency>

        <dependency>
            <groupId>eu.europa.ec.digit.bris.messages-app</groupId>
            <artifactId>bris-br-jaxb</artifactId>
            <version>1.4.0-rc4</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>oss-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>joinup-releases</id>
            <url>https://joinup.ec.europa.eu/nexus/content/repositories/releases/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>ch-jenkins-2k8</id>
            <url>http://ch-jenkins-2k8:8081/artifactory/libs-snapshot-local</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>ch-jenkins-2k8-release</id>
            <url>http://ch-jenkins-2k8:8081/artifactory/libs-release-local</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>
</project>
